tests/sqlcmd/baselines/errors/load_classes3.errbaseline
Unexpected Ad Hoc Planning Error: java.lang.RuntimeException: Error compiling query: org.voltdb.planner.PlanningErrorException: SQL Syntax error in "LOAD sqlcmdtest-procs.jar" unexpected token: LOAD
